messaging, authentication and authorization
